cmake_minimum_required(VERSION 3.28)
project(untitled)

set(CMAKE_CXX_STANDARD 17)


add_executable(
        twoSum twoSum.cpp
)

add_executable(
        heap heap.cpp
)

add_executable(
        merge_sort merge_sort.cpp
)

add_executable(
        bfs bfs.cpp
)

add_executable(
        dfs dfs.cpp
)


add_executable(
        binSearch binSearch.cpp
)


add_executable(
        one one.cpp
)