cmake_minimum_required(VERSION 3.28)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(
        13 13.cpp
)

add_executable(
        13.1.2 13.1.2.cpp
)

add_executable(
        13.1.3 13.1.3.cpp
)

add_executable(
        13.1.4 13.1.4.cpp
)

add_executable(
        13.27 13.27.cpp
)

add_executable(
        test test.cpp
)

add_executable(
        13.6.3 13.6.3.cpp
)

add_executable(
        Array    Array.cpp
)